fixed spacing

--- a/src/index.css
+++ b/src/index.css
@@ -17,5 +17,5 @@ body {
 }
 
 #root {
-  @apply w-full h-full flex flex-col justify-center items-center p-2
+  @apply w-full h-full flex flex-col justify-center items-center p-4
 }
